# mGEMM_darknet

./: Makefile  README.md  massifGetMaxMem.py  test.cfg
cfg/: yolov3-tiny.cfg  yolov3.cfg
examples/: classifier.c  detector.c
include/: CMakeLists.txt  Makefile  cmake_install.cmake  comp.cpp  comp.h  config.h  darknet.h  direct18.cpp  direct18.h  miniTensor.cpp  miniTensor.h  ptmm.cpp  ptmm.h  ptmm_kernels_wf1.h  ptmm_kernels_wf3.h  ptmm_kernels_wf3_ci3.h  ptmm_kernels_wf3_depth.h  ptmm_kernels_wf3_depth_split.h  ptmm_kernels_wf5.h  ptmm_kernels_wf7_ci3.h
libs/: ExecuteNetwork
src/: avgpool_layer.c  avgpool_layer.h  batchnorm_layer.c  batchnorm_layer.h  blas.c  blas.h  convolutional_layer.c  convolutional_layer.h  extern_libs.cpp  extern_libs.h  image.c  maxpool_layer.c  maxpool_layer.h  network.c  parser.c  ptmm.h  route_layer.c  route_layer.h  shortcut_layer.c  shortcut_layer.h  upsample_layer.c  upsample_layer.h  yolo_layer.c
